# Aurora-ASI-KLS

./: .gitattributes  .gitignore  README.md  demo.py  setup.py
asikls/local_feature/: adaptiveThreshold.py  dsift.py
asikls/preprocess/: proposal_ss.py
asikls/util/: paseLabeledFile.py
fast-rcnn/: README.md
fast-rcnn/lib/: setup.py
fast-rcnn/lib/fast_rcnn/: test_kls.py  train_kls.py
selective_search/: CMakeLists.txt  README.md  segment_py.cpp
src/demo/: demo.py
